# dd-native-iast-taint-tracking-js

./: .eslintrc.json  .gitignore  .valgrindrc  AGENTS.md  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  LICENSE-3rdparty.csv  NOTICE  README.md  binding.gyp  index.d.ts  index.js  package-lock.json  package.json  replace.js
.github/: codeql_config.yml  dependabot.yml  dependabot.yml.disabled  pull_request_template.md
.github/workflows/: build.yml  codeql-analysis.yml  pr.yml  pull-request.yml  release.yml
docker/: Dockerfile  alpine.Dockerfile
lib/: binding.js
scripts/: abi.js  check_licenses.js  cpputest.sh  libc.js  pack-all-windows.bat  pack-all.sh  pack.js  pre-pack-all.js  prebuild.js
src/: IAST.cc  Limits.h  Pool.h  WeakMap.h  WeakObjIface.h  iast.cc  iast.h  iast_manager.h  iast_node.h  iast_types.h  iastlimits.h  transaction_manager.h  weakiface.h
src/api/: array_join.cc  array_join.h  concat.cc  concat.h  metrics.cc  metrics.h  replace.cc  replace.h  slice.cc  slice.h  string_case.cc  string_case.h  string_methods.cc  string_methods.h  substring.cc  substring.h  taint_methods.cc  taint_methods.h  trim.cc  trim.h
src/container/: Pool.h  WeakMap.h  pool.h  queued_pool.h  shared_vector.h  singleton.h  weakmap.h
src/gc/: gc.cc  gc.h
src/tainted/: input_info.cc  input_info.h  range.cc  range.h  string_methods.cc  string_methods.h  string_resource.cc  string_resource.h  tainted_object.cc  tainted_object.h  transaction.cc  transaction.h
src/utils/: jsobject_utils.cc  jsobject_utils.h  propagation.cc  propagation.h  string_utils.h  utils.h  validation_utils.h
suppressions/: node.supp
test/: mocha.opts
test/cpputest/: CMakeLists.txt  WeakMap.cc  WeakObjIface.cc  dummy.cc  iast_manager.cc  main.cc  pool.cc  transaction_manager.cc  v8.h  weakiface.cc  weakmap.cc
test/cpputest/container/: pool.cc  queued_pool.cc
test/js/: .eslintrc.json  array_join.spec.js  (+21 more)
(+3 files in other folders)
